--- a/CustomPushAnimation/Base.lproj/Main.storyboard
+++ b/CustomPushAnimation/Base.lproj/Main.storyboard
@@ -102,7 +102,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oF7-kM-ISK">
-                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="50" width="375" height="50"/>
                                 <color key="backgroundColor" red="1" green="0.97393555399999998" blue="0.47813349469999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="KfU-cD-c35"/>
@@ -113,7 +113,7 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4I7-cc-Iok">
-                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
+                                <rect key="frame" x="0.0" y="100" width="375" height="567"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="2e0-UR-y27" id="bTQ-OJ-hwD"/>
@@ -124,7 +124,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="4I7-cc-Iok" firstAttribute="top" secondItem="oF7-kM-ISK" secondAttribute="bottom" id="3C6-SV-5po"/>
-                            <constraint firstItem="oF7-kM-ISK" firstAttribute="top" secondItem="kH8-xo-L7L" secondAttribute="top" id="HhA-2b-3n1"/>
+                            <constraint firstItem="oF7-kM-ISK" firstAttribute="top" secondItem="kH8-xo-L7L" secondAttribute="top" constant="30" id="HhA-2b-3n1"/>
                             <constraint firstItem="4I7-cc-Iok" firstAttribute="leading" secondItem="kH8-xo-L7L" secondAttribute="leading" id="QRs-AK-bnz"/>
                             <constraint firstItem="kH8-xo-L7L" firstAttribute="trailing" secondItem="4I7-cc-Iok" secondAttribute="trailing" id="Qhr-f8-6nj"/>
                             <constraint firstItem="kH8-xo-L7L" firstAttribute="bottom" secondItem="4I7-cc-Iok" secondAttribute="bottom" id="jE3-8g-yNY"/>
