ADD Down direction

--- a/CustomPushAnimation/Base.lproj/Main.storyboard
+++ b/CustomPushAnimation/Base.lproj/Main.storyboard
@@ -283,5 +283,53 @@
             </objects>
             <point key="canvasLocation" x="1257" y="944"/>
         </scene>
+        <!--DownViewController-->
+        <scene sceneID="4xJ-mp-6Kz">
+            <objects>
+                <viewController storyboardIdentifier="DownViewController" title="DownViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="9lN-dm-a5N" customClass="DownViewController" customModule="CustomPushAnimation" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gb4-yz-HZx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kDQ-QC-JQB">
+                                <rect key="frame" x="0.0" y="50" width="375" height="367"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="9lN-dm-a5N" id="7WG-OU-k0L"/>
+                                    <outlet property="delegate" destination="9lN-dm-a5N" id="1RI-mr-MsO"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L5L-ca-n7F">
+                                <rect key="frame" x="0.0" y="417" width="375" height="50"/>
+                                <color key="backgroundColor" red="1" green="0.97393555399999998" blue="0.47813349469999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="7lQ-3V-7OB"/>
+                                </constraints>
+                                <state key="normal" title="back"/>
+                                <connections>
+                                    <action selector="onBack:" destination="9lN-dm-a5N" eventType="touchUpInside" id="Myo-Tg-8Ls"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ryy-cb-Ad5" firstAttribute="trailing" secondItem="kDQ-QC-JQB" secondAttribute="trailing" id="6re-0j-1bb"/>
+                            <constraint firstItem="L5L-ca-n7F" firstAttribute="trailing" secondItem="ryy-cb-Ad5" secondAttribute="trailing" id="AvT-eZ-GZj"/>
+                            <constraint firstItem="kDQ-QC-JQB" firstAttribute="leading" secondItem="ryy-cb-Ad5" secondAttribute="leading" id="aQ8-2w-9GK"/>
+                            <constraint firstItem="ryy-cb-Ad5" firstAttribute="bottom" secondItem="L5L-ca-n7F" secondAttribute="bottom" constant="200" id="egg-oz-ssv"/>
+                            <constraint firstItem="L5L-ca-n7F" firstAttribute="top" secondItem="kDQ-QC-JQB" secondAttribute="bottom" id="fxL-M8-gwW"/>
+                            <constraint firstItem="kDQ-QC-JQB" firstAttribute="top" secondItem="ryy-cb-Ad5" secondAttribute="top" constant="30" id="lea-dp-dbL"/>
+                            <constraint firstItem="L5L-ca-n7F" firstAttribute="leading" secondItem="ryy-cb-Ad5" secondAttribute="leading" id="min-Pw-0HB"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ryy-cb-Ad5"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="kDQ-QC-JQB" id="Pwo-Vg-3BD"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="p3z-zR-1N0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-146.40000000000001" y="951.27436281859082"/>
+        </scene>
     </scenes>
 </document>
